--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Bino html5 free Template</title>
+        <title>Technical Exhibition</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -57,7 +57,7 @@
                                                 <span class="icon-bar"></span>
                                             </button>
                                             <a id="logo" class="navbar-brand" href="#home">
-                                                
+                                                <img src="./assets/images/MindSpark20 - Copy.svg">
                                             </a>
                                         </div>
 
@@ -189,7 +189,7 @@
                                 <div class="col-sm-6">
                                     <div class="single_study_slid_area">
 
-                                        <div class="single_study_text">
+                                        <div class="single_study_text" id="text">
                                             <div class="study_slider"> 
                                                 <div class="item">
                                                     <div class="s_study_icon">
