--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link rel="stylesheet" href="assets/css/magnific-popup.css">
         <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
         <!--        <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">-->
-
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap" rel="stylesheet">
         <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <!--For Plugins external css-->
@@ -145,10 +145,10 @@
                                         <div class="col-md-12 col-sm-10 col-xs-10 margin-bottom-60">
                                             <div class="row">
 
-                                                <div class="col-sm-10 col-sm-offset-1 col-xs-9 col-xs-offset-1">
+                                                <div class="col-sm-10 col-sm-offset-1 col-xs-9 col-xs-offset-1" id="para">
                                                     <article class="single_service_right_text">
                                                         <h4  class="aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500" >MINDSPRAK</h4>
-                                                        <p  class="aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500"  style="font-size: 1.5rem;">MindSpark’19, the National Level Technical Festival of College of Engineering Pune is in its 13th edition this year. It organizes a Technical Exhibition every year which serves as a platform for start-ups and companies to showcase their innovative research and technology.</p>
+                                                        <p class="aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500"  style="font-size: 1.5rem;font-family: 'Merriweather', serif;">MindSpark’19, the National Level Technical Festival of College of Engineering Pune is in its 13th edition this year. It organizes a Technical Exhibition every year which serves as a platform for start-ups and companies to showcase their innovative research and technology.</p>
                                                     </article>
                                                 </div>
                                                 
@@ -158,10 +158,10 @@
                                         <div class="col-md-12 col-sm-10 col-xs-10 margin-bottom-60">
                                             <div class="row">
 
-                                                <div class="col-sm-10 col-sm-offset-1 col-xs-9 col-xs-offset-1">
+                                                <div class="col-sm-10 col-sm-offset-1 col-xs-9 col-xs-offset-1" id="para">
                                                     <article class="single_service_right_text">
                                                         <h4  class="aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500" >TECHNICAL EXHIBITION</h4>
-                                                        <p  class="aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500"  style="font-size: 1.5rem;">Technical Exhibition of Mindspark’19 will continue its role of providing start-ups and companies with the opportunity to spread their ideas and build their network. Last year, we witnessed a footfall of 22,000 consisting of engineering students, CoEP alumni, industry professionals and technology enthusiasts.</p>
+                                                        <p  class="aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500"  style="font-size: 1.5rem;font-family: 'Merriweather', serif;">Technical Exhibition of Mindspark’19 will continue its role of providing start-ups and companies with the opportunity to spread their ideas and build their network. Last year, we witnessed a footfall of 22,000 consisting of engineering students, CoEP alumni, industry professionals and technology enthusiasts.</p>
                                                     </article>
                                                 </div>
                                                 
@@ -237,7 +237,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12 aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500">
                             <div  class="card card1">
                                 <div class="img"> <span></span><span></span><span></span><span></span></div>
                                 <div class="content">
@@ -247,7 +247,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12 aos-init aos-animate" data-aos="fade-up-left" data-aos-duration="500">
                             <div  class="card card2">
                                 <div class="img"> <span></span><span></span><span></span><span></span></div>
                                 <div class="content">
@@ -257,7 +257,7 @@
                             </div>
                         </div>
                         <div class="col-lg-0 col-md-3 col-sm-0"></div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12 aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500">
                             <div  class="card card3">
                                 <div class="img"> <span></span><span></span><span></span><span></span></div>
                                 <div class="content">
@@ -269,7 +269,7 @@
                         <div class="col-lg-0 col-md-3 col-sm-0"></div>
                     </div>
                     <div class="row" style="margin: 3% 0px;">
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12 aos-init aos-animate" data-aos="fade-up-left" data-aos-duration="500">
                             <div class="card card4">
                                 <div class="img"> <span></span><span></span><span></span><span></span></div>
                                 <div class="content">
@@ -278,7 +278,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12 aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500">
                             <div  class="card card5">
                                 <div class="img"> <span></span><span></span><span></span><span></span></div>
                                 <div class="content">
@@ -288,7 +288,7 @@
                             </div>
                         </div>
                         <div class="col-lg-0 col-md-3 col-sm-0"></div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12 aos-init aos-animate" data-aos="fade-up-left" data-aos-duration="500">
                             <div  class="card card6">
                                 <div class="img"> <span></span><span></span><span></span><span></span></div>
                                 <div class="content">
@@ -299,7 +299,7 @@
                         <div class="col-lg-0 col-md-3 col-sm-0"></div>
                     </div>
                     <div class="row"  style="margin: 3% 0px;">
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12 aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500">
                             <div  class="card card7">
                                 <div class="img"> <span></span><span></span><span></span><span></span></div>
                                 <div class="content">
@@ -307,7 +307,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12 aos-init aos-animate" data-aos="fade-up-left" data-aos-duration="500">
                             <div  class="card card8">
                                 <div class="img"> <span></span><span></span><span></span><span></span></div>
                                 <div class="content">
@@ -316,7 +316,7 @@
                             </div>
                         </div>
                         <div class="col-lg-0 col-md-3 col-sm-0"></div>
-                        <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="col-lg-4 col-md-6 col-sm-12 aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500">
                             <div class="card card9">
                                 <div class="img"> <span></span><span></span><span></span><span></span></div>
                                 <div class="content">
@@ -328,7 +328,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-2"></div>
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up-left" data-aos-duration="500">
                             <div class="card card10">
                                 <div class="img"> <span></span><span></span><span></span><span></span></div>
                                 <div class="content">
@@ -336,7 +336,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up-right" data-aos-duration="500">
                             <div  class="card card11">
                                 <div class="img"> <span></span><span></span><span></span><span></span></div>
                                 <div class="content">
